[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "stealthee-mcp"
version = "1.0.0"
description = "AI-powered stealth product launch detection system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.0",
    "smithery>=0.1.23",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

# Points to your server function
[tool.smithery]
server = "stealthee_mcp.server:create_server"